--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://q-wiki.github.io/q-iki.github.io",
+  "homepage": "https://q-wiki.github.io/q-wiki.github.io",
   "name": "q-wiki-platform",
   "version": "0.1.0",
   "private": true,
