--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-flexbox-grid": "^2.1.2",
+    "react-lorem-ipsum": "^1.4.4",
     "react-scripts": "3.2.0"
   },
   "scripts": {
