--- a/package.json
+++ b/package.json
@@ -2,22 +2,20 @@
   "homepage": "https://q-wiki.github.io/q-wiki.github.io",
   "name": "q-wiki-platform",
   "version": "0.1.0",
+  "main": "src/index.js",
   "private": true,
   "dependencies": {
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-flexbox-grid": "^2.1.2",
-    "react-lorem-ipsum": "^1.4.4",
-    "react-scripts": "3.2.0"
+    "react-lorem-ipsum": "^1.4.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "start": "webpack-dev-server --open --port 4000 --compress --mode development",
+    "dev": "webpack --mode development --progress",
     "deploy": "gh-pages -b master -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "webpack --mode production --progress"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +31,23 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "autoprefixer": "^9.7.1",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.8",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
