--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "private": true,
   "dependencies": {
     "node-sass": "^4.13.0",
+    "raw-loader": "^3.1.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-flexbox-grid": "^2.1.2",
-    "react-lorem-ipsum": "^1.4.4"
+    "react-lorem-ipsum": "^1.4.4",
+    "styled-components": "^4.4.1",
+    "styled-theme": "^0.3.3",
+    "styled-tools": "^1.7.1",
+    "svg-url-loader": "^3.0.2",
+    "url-loader": "^1.1.2"
   },
   "scripts": {
     "start": "webpack-dev-server --open --port 4000 --compress --mode development",
@@ -44,8 +50,10 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^4.0.0-beta.8",
     "postcss-loader": "^3.0.0",
+    "react-inlinesvg": "^1.1.7",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
