--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.11.0",
     "react-flexbox-grid": "^2.1.2",
     "react-lorem-ipsum": "^1.4.4",
+    "react-router-dom": "^5.1.2",
     "styled-components": "^4.4.1",
     "styled-theme": "^0.3.3",
     "styled-tools": "^1.7.1",
