--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "node-sass": "^4.13.0",
     "raw-loader": "^3.1.0",
     "react": "^16.11.0",
+    "react-accessible-accordion": "^3.0.1",
+    "react-collapsible": "^2.6.0",
     "react-dom": "^16.11.0",
     "react-flexbox-grid": "^2.1.2",
     "react-lorem-ipsum": "^1.4.4",
