--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "src/index.js",
   "private": true,
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "gh-pages": "^2.1.1",
+    "mobx": "^5.15.0",
+    "mobx-react": "^6.1.4",
     "node-sass": "^4.13.0",
     "raw-loader": "^3.1.0",
     "react": "^16.11.0",
@@ -47,6 +50,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-decorators": "^7.7.4",
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
