--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.11.0",
     "react-flexbox-grid": "^2.1.2",
     "react-lorem-ipsum": "^1.4.4",
+    "react-multi-carousel": "^2.4.2",
     "react-responsive-carousel": "^3.1.51",
     "react-responsive-tabs": "^3.3.0",
     "react-router-dom": "^5.1.2",
