--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "styled-tools": "^1.7.1",
     "svg-url-loader": "^3.0.2",
     "tabs": "^0.2.0",
-    "url-loader": "^1.1.2"
+    "url-loader": "^1.1.2",
+    "yasgui-yasqe": "^2.11.22"
   },
   "scripts": {
     "start": "webpack-dev-server --open --port 4000 --compress --mode development",
