--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "gh-pages": "^2.1.1",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
     "raw-loader": "^3.1.0",
     "react": "^16.11.0",
@@ -27,7 +28,7 @@
   "scripts": {
     "start": "webpack-dev-server --open --port 4000 --compress --mode development",
     "dev": "webpack --mode development --progress",
-    "deploy": "gh-pages -b master -d dist",
+    "deploy": "gh-pages -b master -d dist -m $(git rev-parse --short HEAD)",
     "build": "webpack --mode production --progress"
   },
   "eslintConfig": {
