--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-collapsible": "^2.6.0",
     "react-dom": "^16.11.0",
     "react-flexbox-grid": "^2.1.2",
+    "react-loadable": "^5.5.0",
     "react-lorem-ipsum": "^1.4.4",
     "react-responsive-tabs": "^3.3.0",
     "react-router-dom": "^5.1.2",
@@ -64,6 +65,7 @@
     "style-loader": "^1.0.0",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
   }
