--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-collapsible": "^2.6.0",
     "react-dom": "^16.11.0",
     "react-flexbox-grid": "^2.1.2",
+    "react-iframe": "^1.8.0",
     "react-lorem-ipsum": "^1.4.4",
     "react-responsive-carousel": "^3.1.51",
     "react-responsive-tabs": "^3.3.0",
