--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "gh-pages": "^2.1.1",
+    "immutability-helper": "^3.0.1",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
     "node-sass": "^4.13.0",
