--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-collapsible": "^2.6.0",
     "react-dom": "^16.11.0",
     "react-flexbox-grid": "^2.1.2",
+    "react-hook-form": "^3.29.3",
     "react-lorem-ipsum": "^1.4.4",
     "react-responsive-tabs": "^3.3.0",
     "react-router-dom": "^5.1.2",
