--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.11.0",
     "react-accessible-accordion": "^3.0.1",
     "react-collapsible": "^2.6.0",
+    "react-custom-scroll": "^4.1.5",
     "react-dom": "^16.11.0",
     "react-flexbox-grid": "^2.1.2",
     "react-iframe": "^1.8.0",
