--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "@babel/env", "@babel/react"
   ],
   "plugins": [
-    "@babel/proposal-class-properties"
+    ["@babel/plugin-proposal-decorators", { "legacy": true}],
+    ["@babel/plugin-proposal-class-properties", { "loose": true}]
   ]
 }
