--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-custom-scroll": "^4.1.5",
     "react-dom": "^16.11.0",
     "react-flexbox-grid": "^2.1.2",
+    "react-hook-form": "^3.29.3",
     "react-iframe": "^1.8.0",
     "react-loadable": "^5.5.0",
     "react-lorem-ipsum": "^1.4.4",
